--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,7 +9,7 @@ mySpecialConfig {
   }
 }
 
-#timed assertions test config
+# timed assertions test config
 specialTimedAssertionsConfig {
   akka.test.single-expect-default = 0.3s
 }
@@ -18,5 +18,22 @@ specialTimedAssertionsConfig {
 interceptingLogMessages {
   akka {
     loggers = ["akka.testkit.TestEventListener"]
+  }
+}
+
+# routers demo
+routersDemo {
+  akka {
+    actor.deployment {
+      /poolMaster2 {
+        router = round-robin-pool
+        nr-of-instances = 5
+      }
+
+      /groupMaster2 {
+        router = round-robin-group
+        routees.paths = ["/user/slave_1", "/user/slave_2", "/user/slave_3", "/user/slave_4", "/user/slave_5"]
+      }
+    }
   }
 }
