--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -55,3 +55,18 @@ dispatchersDemo {
     }
   }
 }
+
+# mailboxes demo
+mailboxesDemo {
+  suppport-ticket-dispatcher {
+    mailbox-type = "part5_infrastructure.Mailboxes$SupportTicketPriorityMailbox"
+  }
+  control-mailbox {
+    mailbox-type = "akka.dispatch.UnboundedControlAwareMailbox"
+  }
+  akka.actor.deployment {
+    /alternativeControlAwareActor {
+      mailbox = control-mailbox
+    }
+  }
+}
